[package]
name = "flies-in-light"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
js-sys = "0.3.67"
wasm-bindgen = "0.2.92"
yew = { version="0.21.0", features = ["csr"] }
yew-router = "0.18.0"


[dependencies.web-sys]
version = "0.3.58"
features = [
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "ImageBitmap",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList"
]